# Experiments

./: README.md
docs/: architecture.md
rl_envs/: README.md  example_train.py  simple_env.py
ros2_bridge/: README.md
ros2_bridge/franka_teleop/: CMakeLists.txt  package.xml
ros2_bridge/franka_teleop/launch/: franka_teleop.launch.py
ros2_bridge/franka_teleop/src/: franka_teleop_node.cpp
ros2_bridge/scripts/: franka_vive_teleop.py  manus_franka_bridge.py  publish_cmd_vel.py
ros2_bridge/spot_teleop/: CMakeLists.txt  package.xml
ros2_bridge/spot_teleop/launch/: spot_teleop.launch.py
ros2_bridge/spot_teleop/src/: spot_teleop_node.cpp
ros2_bridge/turtlebot_teleop/: CMakeLists.txt  package.xml
ros2_bridge/turtlebot_teleop/launch/: turtlebot_teleop.launch.py
ros2_bridge/turtlebot_teleop/src/: turtlebot_teleop_node.cpp
ros2_bridge/ur_teleop/: CMakeLists.txt  package.xml
ros2_bridge/ur_teleop/launch/: ur_teleop.launch.py
ros2_bridge/ur_teleop/src/: ur_teleop_node.cpp
unity/: .gitignore
unity/Assets/Scenes/: TeleopDemo.unity
