<?xml version="1.0"?>
<package format="3">
  <name>franka_teleop</name>
  <version>0.1.0</version>
  <description>ROS2 bridge: teleoperate Franka from Unity</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_cpp</exec_depend>
</package>
